sumo/tests/od2trips/errors/default_false_departlane/errors.od2trips
Error: Invalid departlane definition;
 must be one of ("departlane", "random", "free", "allowed", "best", or an int>0)
Quitting (on error).
